изменил расположение файлов

--- a/templates/game-over.html
+++ b/templates/game-over.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>game over</title>
-    <link rel="stylesheet" href="../static/css/game-over.css">
-    <link rel="icon" href="../static/images/icon.png" type="image" />
+    <link rel="stylesheet" href="../public/css/game-over.css">
+    <link rel="icon" href="../public/images/icon.png" type="image" />
 </head>
 
 <body>
@@ -20,8 +20,8 @@
                 <p class="result-title">МОЛОДЕЦ! ЕЩЕ НЕМНОГО! ДЕРЖИ МОТИВИРУЮЩЕЕ ВИДЕО!</p>
 
                 <div class="video-placeholder">
-                    <video controls height="300" poster="../static/images/icon.png">
-                    <source src="../static/video/ricroll.mp4" type="video/mp4">
+                    <video controls height="300" poster="../public/images/cats.jpg">
+                    <source src="../public/video/ricroll.mp4" type="video/mp4">
                     Ваш браузер не поддерживает встроенные видео :(
                 </video>
             </div>
@@ -36,7 +36,7 @@
         </div>
 
     </div>
-    <script src="../static/js/menu.js"></script>
+    <script src="../public/js/menu.js"></script>
 </body>
 
 </html>
