--- a/templates/menu.html
+++ b/templates/menu.html
@@ -5,24 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>menu</title>
-    <link rel="stylesheet" href="../static/css/menu.css">
-    <link rel="icon" href="../static/images/icon.png" type="image" />
+    <link rel="stylesheet" href="../public/css/menu.css">
+    <link rel="icon" href="../public/images/icon.png" type="image" />
 </head>
 
 <body>
     <div class="bg">
         <div class="header">
-            <img src="../static/images/settings.png" alt="settings" class="settings">
-            <img src="../static/images/logo.png" alt="logo" class="logo">
+            <img src="../public/images/settings.png" alt="settings" class="settings">
+            <img src="../public/images/logo.png" alt="logo" class="logo">
             <div class="profile">
                 <p class="profile__nickname">СЛАВЯНИН</p>
-                <img src="../static/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
+                <img src="../public/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
             </div>
         </div>
         <div class="menu">
             <div class="link play-solo-bg">
                 <div class="img-placeholder">
-                    <img src="../static/images/solo.png" alt="solo" class="link__image">
+                    <img src="../public/images/solo.png" alt="solo" class="link__image">
                 </div>
                 <div class="link__text">
                     <h1 class="play-solo-header">ОДНОПОЛЬЗОВАТЕЛЬСКИЙ РЕЖИМ</h2>
@@ -31,7 +31,7 @@
             </div>
             <div class="link multiplayer-bg" onclick="window.location.href = 'game-over.html'">
                 <div class="img-placeholder">
-                    <img src="../static/images/multiplayer.png" alt="multiplayer" class="link__image">
+                    <img src="../public/images/multiplayer.png" alt="multiplayer" class="link__image">
                 </div>
                 <div class="link__text">
                     <h1 class="multiplayer-header">МНОГОПОЛЬЗОВАТЕЛЬСКИЙ РЕЖИМ</h2>
@@ -40,7 +40,7 @@
             </div>
             <div class="link about-us-bg">
                 <div class="img-placeholder">
-                    <img src="../static/images/about.png" alt="about us" class="link__image">
+                    <img src="../public/images/about.png" alt="about us" class="link__image">
                 </div>
                 <div class="link__text">
                     <h1 class="about-us-header">ПРО НАС</h2>
@@ -50,7 +50,7 @@
         </div>
 
     </div>
-    <script src="../static/js/menu.js"></script>
+    <script src="../public/js/menu.js"></script>
 </body>
 
 </html>
