--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="stylesheet" href="../styles/{% block style %}{% endblock %}"/>
-        <script src="../script/{% block script %}{% endblock %}"></script>
+        <link rel="stylesheet" href="../css/{% block style %}{% endblock %}"/>
+        <script src="../js/{% block script %}{% endblock %}"></script>
     </head>
     <body>
         {% block content %}
