--- a/public/css/register-style.css
+++ b/public/css/register-style.css
@@ -5,7 +5,7 @@
 body{
     max-width: 100%;
     max-height: 100%;
-    background-image: url(../styles/background.png);
+    background-image: url(../css/background.png);
     background-size: cover;  
 }
 .title{
