--- a/templates/game-over.html.twig
+++ b/templates/game-over.html.twig
@@ -1,15 +1,7 @@
-<!DOCTYPE html>
-<html lang="ru">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>game over</title>
-    <link rel="stylesheet" href="../public/css/game-over.css">
-    <link rel="icon" href="../public/images/icon.png" type="image" />
-</head>
-
-<body>
+{% extends "base.html.twig" %}
+{% block style %}game-over.css{% endblock %}
+{% block script %}game-over.js{% endblock %}
+{% block content %}
     <div class="bg">
         <div class="results-placeholder">
             <div class="results">
@@ -20,8 +12,8 @@
                 <p class="result-title">МОЛОДЕЦ! ЕЩЕ НЕМНОГО! ДЕРЖИ МОТИВИРУЮЩЕЕ ВИДЕО!</p>
 
                 <div class="video-placeholder">
-                    <video controls height="300" poster="../public/images/cats.jpg">
-                    <source src="../public/video/ricroll.mp4" type="video/mp4">
+                    <video controls height="300" poster="../images/cats.jpg">
+                    <source src="../video/ricroll.mp4" type="video/mp4">
                     Ваш браузер не поддерживает встроенные видео :(
                 </video>
             </div>
@@ -34,9 +26,5 @@
             </div>
 
         </div>
-
     </div>
-    <script src="../public/js/menu.js"></script>
-</body>
-
-</html>
+{% endblock %}
