--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -1,37 +1,29 @@
-<!DOCTYPE html>
-<html lang="ru">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>menu</title>
-    <link rel="stylesheet" href="../public/css/menu.css">
-    <link rel="icon" href="../public/images/icon.png" type="image" />
-</head>
-
-<body>
+{% extends "base.html.twig" %}
+{% block style %}menu.css{% endblock %}
+{% block script %}menu.js{% endblock %}
+{% block content %}
     <div class="bg">
         <div class="header">
-            <img src="../public/images/settings.png" alt="settings" class="settings">
-            <img src="../public/images/logo.png" alt="logo" class="logo">
+            <img src="../images/settings.png" alt="settings" class="settings">
+            <img src="../images/logo.png" alt="logo" class="logo">
             <div class="profile">
                 <p class="profile__nickname">СЛАВЯНИН</p>
-                <img src="../public/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
+                <img src="../images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
             </div>
         </div>
         <div class="menu">
             <div class="link play-solo-bg">
                 <div class="img-placeholder">
-                    <img src="../public/images/solo.png" alt="solo" class="link__image">
+                    <img src="../images/solo.png" alt="solo" class="link__image">
                 </div>
                 <div class="link__text">
                     <h1 class="play-solo-header">ОДНОПОЛЬЗОВАТЕЛЬСКИЙ РЕЖИМ</h2>
                         <p class="play-solo-subtitle">ПРЕВЗОЙДИ СЕБЯ И ПОСТАВЬ НОВЫЙ РЕКОРД</p>
                 </div>
             </div>
-            <div class="link multiplayer-bg" onclick="window.location.href = 'game-over.html'">
+            <div class="link multiplayer-bg" onclick="window.location.href = '/game_over'">
                 <div class="img-placeholder">
-                    <img src="../public/images/multiplayer.png" alt="multiplayer" class="link__image">
+                    <img src="../images/multiplayer.png" alt="multiplayer" class="link__image">
                 </div>
                 <div class="link__text">
                     <h1 class="multiplayer-header">МНОГОПОЛЬЗОВАТЕЛЬСКИЙ РЕЖИМ</h2>
@@ -40,7 +32,7 @@
             </div>
             <div class="link about-us-bg">
                 <div class="img-placeholder">
-                    <img src="../public/images/about.png" alt="about us" class="link__image">
+                    <img src="../images/about.png" alt="about us" class="link__image">
                 </div>
                 <div class="link__text">
                     <h1 class="about-us-header">ПРО НАС</h2>
@@ -48,9 +40,8 @@
                 </div>
             </div>
         </div>
-
     </div>
-    <script src="../public/js/menu.js"></script>
-</body>
+{% endblock %}
 
-</html>
+
+
