--- a/public/css/register-style.css
+++ b/public/css/register-style.css
@@ -8,30 +8,43 @@ body{
     background-image: url(../css/background.png);
     background-size: cover;  
 }
-.title{
-    margin:1% 0% 7% 35%;
+
+.main
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .logo
 {
     padding-top: 50px;
+    padding-bottom: 250px;
 }
 .login{
     background-color: white;
-    margin-left: 18%;
     width: 900px;
     height: 357px;
     padding: 21px 25px;
 }
+
+.login-input
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .login__title{
     font-family: "Russo One", sans-serif;
     font-size: 32px;
-    margin-bottom: 15px;
+    margin: 0 auto 15px;
+    width: 850px;
 }
 
 .login-input__username-input{
     border: none;
-    padding-left: 5px;
+    box-sizing: border-box;
+    padding-left: 15px;
     border-radius: 5px;
     width: 850px;
     height: 50px;
@@ -48,7 +61,8 @@ body{
 
 .login-input__password-input{
     border: none;
-    padding-left: 5px;
+    box-sizing: border-box;
+    padding-left: 15px;
     border-radius: 5px;
     width: 850px;
     height: 50px;
@@ -65,7 +79,8 @@ body{
 
 .login-input__password-again{
     border: none;
-    padding-left: 5px;
+    box-sizing: border-box;
+    padding-left: 15px;
     border-radius: 5px;
     width: 850px;
     height: 50px;
@@ -98,6 +113,7 @@ body{
     background: #aaa;
     margin-right: 30px;
     cursor: pointer;
+    text-align: center;
 }
 .Register{
     font-family: "Russo One", sans-serif;
