изменил стандартную форму логинации на кастомизированную

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -85,6 +85,8 @@ body{
     text-decoration: none;
     text-align: center;
     color: white;
+    text-decoration: none;
+    text-align: center;
 }
 .LogIn{
     font-family: "Russo One", sans-serif;
@@ -117,6 +119,13 @@ body{
     color: rgba(232, 105, 97, 1);
     display: none;
 }
+
+.login-input__username-error{
+    font: 400 12px/16px Russo One, sans-serif;
+    text-align: left;
+    color: rgba(232, 105, 97, 1);
+}
+
 .login-input__username-require{
     font: 400 12px/16px Russo One, sans-serif;
     text-align: left;
