--- a/public/css/game.css
+++ b/public/css/game.css
@@ -11,6 +11,7 @@
     width: 100%;
     height: 100vh;
     background-image: url(background.png);
+    background-size: cover;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -41,12 +42,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-#game
-{
-    width: 340px;
-    height: 100%;
 }
 
 .next__figure
