--- a/templates/user/register.html.twig
+++ b/templates/user/register.html.twig
@@ -21,7 +21,7 @@
             <p class="login-input__again-validation">ПАРОЛЬ ДОЛЖЕН СОДЕРЖАТЬ НЕ МЕНЕЕ 8 СИМВОЛОВ</p>
             <p class="login-input__again-identical">ПАРОЛИ ДОЛЖНЫ БЫТЬ ОДИНАКОВЫМИ</p>
             <div class="login-input__button">
-                <a class="LogIn" href="/login-page">Вход</a>
+                <a class="LogIn" href="/login">Вход</a>
                 <input class="Register" type="submit" value="Регистрация"/>
             </div>
             {{ form_end(form) }}
