--- a/templates/game-over.html.twig
+++ b/templates/game-over.html.twig
@@ -18,10 +18,10 @@
                 </video>
             </div>
                 <div class="link">
-                    <h1 class="link__header">СЫГРАТЬ ЗАНОВО</h2>
+                    <h1 class="link__header" onclick="window.location.href = '/game'">СЫГРАТЬ ЗАНОВО</h1>
                 </div>
                 <div class="link">
-                    <h1 class="link__header" onclick="window.location.href = 'menu.html'">ВЕРНУТЬСЯ В МЕНЮ</h2>
+                    <h1 class="link__header" onclick="window.location.href = '/menu'">ВЕРНУТЬСЯ В МЕНЮ</h2>
                 </div>
             </div>
 
