добавил отправку данных игры на бэк

--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -12,7 +12,7 @@
             </div>
         </div>
         <div class="menu">
-            <div class="link play-solo-bg">
+            <div class="link play-solo-bg" onclick="window.location.href = '/game'">
                 <div class="img-placeholder">
                     <img src="../images/solo.png" alt="solo" class="link__image">
                 </div>
@@ -21,7 +21,7 @@
                         <p class="play-solo-subtitle">ПРЕВЗОЙДИ СЕБЯ И ПОСТАВЬ НОВЫЙ РЕКОРД</p>
                 </div>
             </div>
-            <div class="link multiplayer-bg" onclick="window.location.href = '/game_over'">
+            <div class="link multiplayer-bg" onclick="window.location.href = '/game'">
                 <div class="img-placeholder">
                     <img src="../images/multiplayer.png" alt="multiplayer" class="link__image">
                 </div>
