реализовали буфер для тетриса и показ следующих фигур

--- a/templates/game-over.html.twig
+++ b/templates/game-over.html.twig
@@ -6,9 +6,9 @@
         <div class="results-placeholder">
             <div class="results">
                 <p class="result-title">ФИНАЛЬНЫЙ СЧЕТ</p>
-                <p class="score">0</p>
+                <p class="score">{{lastScore}}</p>
                 <p class="result-title">ЛИЧНЫЙ РЕКОРД</p>
-                <p class="score">1</p>
+                <p class="score">{{totalScore}}</p>
                 <p class="result-title">МОЛОДЕЦ! ЕЩЕ НЕМНОГО! ДЕРЖИ МОТИВИРУЮЩЕЕ ВИДЕО!</p>
 
                 <div class="video-placeholder">
