Исправил GameController::gameOver. Изменил на lowerCamelCase. Поменял передачу в шаблон: totalScore -> maxScore

--- a/templates/game-over.html.twig
+++ b/templates/game-over.html.twig
@@ -8,7 +8,7 @@
                 <p class="result-title">ФИНАЛЬНЫЙ СЧЕТ</p>
                 <p class="score">{{lastScore}}</p>
                 <p class="result-title">ЛИЧНЫЙ РЕКОРД</p>
-                <p class="score">{{totalScore}}</p>
+                <p class="score">{{maxScore}}</p>
                 <p class="result-title">МОЛОДЕЦ! ЕЩЕ НЕМНОГО! ДЕРЖИ МОТИВИРУЮЩЕЕ ВИДЕО!</p>
 
                 <div class="video-placeholder">
