--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -7,7 +7,7 @@
             <img src="../images/settings.png" alt="settings" class="settings">
             <img src="../images/logo.png" alt="logo" class="logo">
             <div class="profile">
-                <p class="profile__nickname">СЛАВЯНИН</p>
+                <p class="profile__nickname">{{user.login}}</p>
                 <img src="../images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
             </div>
         </div>
