поправили twig шаблоны и css

--- a/templates/game-over.html.twig
+++ b/templates/game-over.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
-{% block style %}game-over.css{% endblock %}
-{% block script %}game-over.js{% endblock %}
+{% block style %}<link rel="stylesheet" href="css/game-over.css"/>{% endblock %}
+{% block script %}<script src="js/game-over.js"></script>{% endblock %}
 {% block content %}
     <div class="bg">
         <div class="results-placeholder">
@@ -12,8 +12,8 @@
                 <p class="result-title">МОЛОДЕЦ! ЕЩЕ НЕМНОГО! ДЕРЖИ МОТИВИРУЮЩЕЕ ВИДЕО!</p>
 
                 <div class="video-placeholder">
-                    <video controls height="300" poster="../images/cats.jpg">
-                    <source src="../video/ricroll.mp4" type="video/mp4">
+                    <video controls height="300" poster="images/cats.jpg">
+                    <source src="video/ricroll.mp4" type="video/mp4">
                     Ваш браузер не поддерживает встроенные видео :(
                 </video>
             </div>
@@ -21,7 +21,7 @@
                     <h1 class="link__header" onclick="window.location.href = '/game'">СЫГРАТЬ ЗАНОВО</h1>
                 </div>
                 <div class="link">
-                    <h1 class="link__header" onclick="window.location.href = '/menu'">ВЕРНУТЬСЯ В МЕНЮ</h2>
+                    <h1 class="link__header" onclick="window.location.href = '/menu'">ВЕРНУТЬСЯ В МЕНЮ</h1>
                 </div>
             </div>
 
