--- a/public/css/game-over.css
+++ b/public/css/game-over.css
@@ -1,21 +1,22 @@
 * {
     padding: 0;
     margin: 0;
-
     font-family: "Russo One", sans-serif;
     font-weight: 400;
     color: #dba1a1;
 }
 
-.bg {
+.bg 
+{
     min-height: 100vh;
     width: 100vw;
-    background: url("../images/game-over-bg.png") no-repeat;
+    background: url(/images/bg.png) no-repeat;
     background-size: cover;
 
 }
 
-.link {
+.link 
+{
     display: flex;
     align-items: center;
     justify-content: end;
@@ -27,25 +28,28 @@
     padding-right: 20px;
 }
 
-.link__header {
+.link__header 
+{
     display: flex;
     flex-direction: column;
     justify-content: center;
     gap: 9px;
 }
-.video-placeholder {
+.video-placeholder 
+{
     display: flex;
     justify-content: center;
 }
-.results-placeholder {
+.results-placeholder 
+{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
 
-.results {
-
+.results 
+{
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -59,10 +63,12 @@
     gap: 20px;
 }
 
-.result-title {
+.result-title 
+{
     font-size: 32px;
 }
-.score {
+.score 
+{
     font-size: 92px;
     color: #f3c5c5;
     background-color: #361F1F;
