--- a/public/css/game.css
+++ b/public/css/game.css
@@ -10,7 +10,7 @@
 {
     width: 100%;
     height: 100vh;
-    background-image: url(background.png);
+    background-image: url(/images/bg.png);
     background-size: cover;
     display: flex;
     align-items: center;
@@ -22,12 +22,13 @@
 {
     padding-bottom: 85px;
 }
+
 .wrapper-game
 {
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
-    background-image: url(../images/field.png);
+    background-image: url(/images/field.png);
     background-size: 100% 100%;
     width: 685px;
     height: 683px;
@@ -54,4 +55,12 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+}
+
+.game__score
+{
+    color: white;
+    text-align: center;
+    padding-top: 10px;
+    font: 800 22px/22px "Russo One", sans-serif;
 }
