--- a/public/css/register-style.css
+++ b/public/css/register-style.css
@@ -1,11 +1,13 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: "Russo One", sans-serif;
+    text-decoration: none;
 }
 body{
     max-width: 100%;
     max-height: 100%;
-    background-image: url(../css/background.png);
+    background-image: url(/images/bg.png);
     background-size: cover;  
 }
 
@@ -21,10 +23,13 @@ body{
     padding-top: 50px;
     padding-bottom: 250px;
 }
-.login{
+
+.login
+{
+    border-radius: 10px;
+    box-sizing: border-box;
     background-color: white;
     width: 900px;
-    height: 357px;
     padding: 21px 25px;
 }
 
@@ -34,14 +39,16 @@ body{
     flex-direction: column;
     align-items: center;
 }
-.login__title{
-    font-family: "Russo One", sans-serif;
+
+.login__title
+{
     font-size: 32px;
     margin: 0 auto 15px;
     width: 850px;
 }
 
-.login-input__username-input{
+.login-input__username-input, .login-input__password-input, .login-input__password-again
+{
     border: none;
     box-sizing: border-box;
     padding-left: 15px;
@@ -54,120 +61,52 @@ body{
     margin-bottom: 19px;
 }
 
-.login-input__username-input:not(:placeholder-shown){
+.login-input__username-input:not(:placeholder-shown), .login-input__password-input:not(:placeholder-shown), .login-input__password-again:not(:placeholder-shown)
+{
     background:#4b4a4a;
     color: white;   
 }
 
-.login-input__password-input{
-    border: none;
-    box-sizing: border-box;
-    padding-left: 15px;
-    border-radius: 5px;
-    width: 850px;
-    height: 50px;
-    background: #222;
-    font-family: "Russo One", sans-serif;
-    font-size: 32px;
-    margin-bottom: 19px;
-}
-
-.login-input__password-input:not(:placeholder-shown){
-    background:#4b4a4a;
-    color: white;   
-}
-
-.login-input__password-again{
-    border: none;
-    box-sizing: border-box;
-    padding-left: 15px;
-    border-radius: 5px;
-    width: 850px;
-    height: 50px;
-    background: #222;
-    font-family: "Russo One", sans-serif;
-    font-size: 32px;
-    margin-bottom: 19px;
-}
-
-.login-input__password-again:not(:placeholder-shown){
-    background:#4b4a4a;
-    color: white;   
-}
-
-.viewPass{
+.viewPass
+{
     display: none;
 }
 
-.login-input__button{
+.login-input__button
+{
     display: flex;
+    gap: 25px;
 }
 
-.LogIn{
-    font-family: "Russo One", sans-serif;
-    border-radius: 5px;
-    font-size: 32px;
-    border: none;
-    width: 375px;
-    height: 50px;
-    background: #aaa;
-    margin-right: 30px;
-    cursor: pointer;
-    text-align: center;
-}
-.Register{
-    font-family: "Russo One", sans-serif;
-    border-radius: 5px;
-    font-size: 32px;
-    border: none;
+.Register
+{
     width: 450px;
-    height: 50px;
-    color: #fff;
-    background: #1e48ff;
+    padding: 15px 0;
+    text-align: center;
+    background-color: #1E48FF;
+    color: #FFFFFF;
+    font-size: 32px;
+    font-weight: 800;
+    border-radius: 5px;
     cursor: pointer;
+    border: none;
 }
 
-.login-input__password-require{
-    font: 400 12px/16px Russo One, sans-serif;
-    text-align: left;
-    color: rgba(232, 105, 97, 1);
-    display: none;
-}
-.login-input__password-validation{
-    font: 400 12px/16px Russo One, sans-serif;
-    text-align: left;
-    color: rgba(232, 105, 97, 1);
-    display: none;
-}
-
-.login-input__again-require{
-    font: 400 12px/16px Russo One, sans-serif;
-    text-align: left;
-    color: rgba(232, 105, 97, 1);
-    display: none;
-}
-.login-input__again-validation{
-    font: 400 12px/16px Russo One, sans-serif;
-    text-align: left;
-    color: rgba(232, 105, 97, 1);
-    display: none;
+.LogIn
+{
+    width: 375px;
+    padding: 11px 0;
+    text-align: center;
+    background-color: #AAAAAA;
+    color: #000000;
+    font-size: 32px;
+    font-weight: 800;
+    border-radius: 5px;
 }
 
-.login-input__again-identical{
-    font: 400 12px/16px Russo One, sans-serif;
-    text-align: left;
-    color: rgba(232, 105, 97, 1);
-    display: none;
-}
-
-.login-input__username-validation{
-    font: 400 12px/16px Russo One, sans-serif;
-    text-align: left;
-    color: rgba(232, 105, 97, 1);
-    display: none;
-}
-.login-input__username-require, .login-input__username-employment{
-    font: 400 12px/16px Russo One, sans-serif;
+.login-input__password-require, .login-input__username-employment, .login-input__password-validation, .login-input__again-require, .login-input__again-validation, .login-input__again-identical, .login-input__username-validation, .login-input__username-require, .login-input__username-employment
+{
+    font: 400 12px/16px "Russo One", sans-serif;
     text-align: left;
     color: rgba(232, 105, 97, 1);
     display: none;
