--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
     <head>
+        <link rel="icon" type="image/png" href="images/icon.png">
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="stylesheet" href="../css/{% block style %}{% endblock %}"/>
-        <script src="../js/{% block script %}{% endblock %}"></script>
+        {% block style %}{% endblock %}
+        {% block script %}{% endblock %}
     </head>
     <body>
         {% block content %}
