--- a/templates/game.html.twig
+++ b/templates/game.html.twig
@@ -1,10 +1,9 @@
 {% extends "base.html.twig" %}
 {% block style %}game.css{% endblock %}
-{% block script %}game.js{% endblock %}
 {% block content %}
 <body>
    <main class="main">
-        <img class="logo" src="../images/logo.svg" alt="logo">
+        <img class="logo" src="/images/logo.svg" alt="logo">
         <div class="wrapper-game">
             <div class="game__buffer">
                 <img class="buffer__figure" src="" alt="figure">
@@ -21,5 +20,9 @@
         </div>
    </main>
 </body>
-</html>
+<script src="/js/game/game-end.js"></script>
+<script src="/js/game/player.js"></script>
+<script src="/js/game/figures.js"></script>
+<script src="/js/game/images.js"></script>
+<script src="/js/game/game.js"></script>
 {% endblock %}
