Поменял twig шаблоны

--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -1,4 +1,6 @@
 {% extends "base.html.twig" %}
+
+{% block title %}Menu{% endblock %}
 {% block style %}<link rel="stylesheet" href="css/menu.css"/>{% endblock %}
 {% block script %}<script src="js/menu.js"></script>{% endblock %}
 {% block content %}
