--- a/templates/game.html.twig
+++ b/templates/game.html.twig
@@ -1,4 +1,6 @@
 {% extends "base.html.twig" %}
+
+{% block title %}Tetris{% endblock %}
 {% block style %}<link rel="stylesheet" href="css/game.css"/>{% endblock %}
 {% block script %}<script src="js/game.js"></script>{% endblock %}
 {% block content %}
