--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block title %}Log in{% endblock %}
 {% block style %}<link rel="stylesheet" href="css/login.css"/>{% endblock %}
 {% block script %}<script src="js/login.js"></script>{% endblock %}
 {% block content %}
