--- a/templates/user/register.html.twig
+++ b/templates/user/register.html.twig
@@ -1,4 +1,6 @@
 {% extends "base.html.twig" %}
+
+{% block title %}Signup{% endblock %}
 {% block style %}<link rel="stylesheet" href="css/register-style.css"/>{% endblock %}
 {% block script %}<script src="js/register.js"></script>{% endblock %}
 {% block content %}
