поправил пути в твиг шаблонах

--- a/templates/game.html.twig
+++ b/templates/game.html.twig
@@ -1,7 +1,7 @@
 {% extends "base.html.twig" %}
 
 {% block title %}Tetris{% endblock %}
-{% block style %}<link rel="stylesheet" href="css/game.css"/>{% endblock %}
+{% block style %}<link rel="stylesheet" href="/css/game.css"/>{% endblock %}
 {% block content %}
 <body>
    <main class="main">
