--- a/templates/user/register.html.twig
+++ b/templates/user/register.html.twig
@@ -1,12 +1,12 @@
 {% extends "base.html.twig" %}
 
 {% block title %}Signup{% endblock %}
-{% block style %}<link rel="stylesheet" href="css/register-style.css"/>{% endblock %}
-{% block script %}<script src="js/register.js"></script>{% endblock %}
+{% block style %}<link rel="stylesheet" href="/css/register-style.css"/>{% endblock %}
+{% block script %}<script src="/js/register.js"></script>{% endblock %}
 {% block content %}
     <main class="main">
         <div class="title">
-            <img class="logo" src="images/logo.svg">
+            <img class="logo" src="/images/logo.svg">
         </div>
         <div class="login">
             <p class="login__title">ДОБРО ПОЖАЛОВАТЬ В СЛАВЯНСКИЙ ТЕТРИС!</p>
