--- a/templates/game-over.html.twig
+++ b/templates/game-over.html.twig
@@ -1,8 +1,8 @@
 {% extends "base.html.twig" %}
 
 {% block title %}Game Over{% endblock %}
-{% block style %}<link rel="stylesheet" href="css/game-over.css"/>{% endblock %}
-{% block script %}<script src="js/game-over.js"></script>{% endblock %}
+{% block style %}<link rel="stylesheet" href="/css/game-over.css"/>{% endblock %}
+{% block script %}<script src="/js/game-over.js"></script>{% endblock %}
 {% block content %}
     <div class="bg">
         <div class="results-placeholder">
