--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,12 +1,12 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Log in{% endblock %}
-{% block style %}<link rel="stylesheet" href="css/login.css"/>{% endblock %}
-{% block script %}<script src="js/login.js"></script>{% endblock %}
+{% block style %}<link rel="stylesheet" href="/css/login.css"/>{% endblock %}
+{% block script %}<script src="/js/login.js"></script>{% endblock %}
 {% block content %}
     <main class="main">
         <div class="title">
-            <img class="logo" src="images/logo.svg" alt="logo">
+            <img class="logo" src="/images/logo.svg" alt="logo">
         </div>
         <div class="login">
             <h1 class="login__title">ДОБРО ПОЖАЛОВАТЬ В СЛАВЯНСКИЙ ТЕТРИС!</h1>
