исправил ссылки в twig шаблонах

--- a/templates/game-over.html.twig
+++ b/templates/game-over.html.twig
@@ -1,8 +1,8 @@
 {% extends "base.html.twig" %}
 
 {% block title %}Game Over{% endblock %}
-{% block style %}<link rel="stylesheet" href="css/game-over.css"/>{% endblock %}
-{% block script %}<script src="js/game-over.js"></script>{% endblock %}
+{% block style %}<link rel="stylesheet" href="/css/game-over.css"/>{% endblock %}
+{% block script %}<script src="/js/game-over.js"></script>{% endblock %}
 {% block content %}
     <div class="bg">
         <div class="results-placeholder">
@@ -14,8 +14,8 @@
                 <p class="result-title">МОЛОДЕЦ! ЕЩЕ НЕМНОГО! ДЕРЖИ МОТИВИРУЮЩЕЕ ВИДЕО!</p>
 
                 <div class="video-placeholder">
-                    <video controls height="300" poster="images/cats.jpg">
-                    <source src="video/ricroll.mp4" type="video/mp4">
+                    <video controls height="300" poster="/images/cats.jpg">
+                    <source src="/video/ricroll.mp4" type="/video/mp4">
                     Ваш браузер не поддерживает встроенные видео :(
                 </video>
             </div>
