--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
     <head>
-        <link rel="icon" type="image/png" href="images/icon.png">
+        <link rel="icon" type="/image/png" href="images/icon.png">
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block style %}{% endblock %}
