сделал отображение результата игры

--- a/templates/game.html.twig
+++ b/templates/game.html.twig
@@ -20,7 +20,7 @@
                 <img class="figure"  src="" alt="figure">
             </div>
         </div>
-        <p class="game__score">228</p>
+        <p class="game__score"></p>
    </main>
 </body>
 <script src="/js/game/game-end.js"></script>
