--- a/templates/game.html.twig
+++ b/templates/game.html.twig
@@ -25,6 +25,7 @@
 </body>
 <script src="/js/game/game-end.js"></script>
 <script src="/js/game/player.js"></script>
+<script src="/js/game/interface.js"></script>
 <script src="/js/game/figures.js"></script>
 <script src="/js/game/images.js"></script>
 <script src="/js/game/game.js"></script>
