добавили разные поля и пофикисили шифтер

--- a/templates/game.html.twig
+++ b/templates/game.html.twig
@@ -7,22 +7,30 @@
    <main class="main">
         <img class="logo" src="/images/logo.svg" alt="logo">
         <div class="wrapper-game">
-            <div class="game__buffer">
-                <img class="buffer__figure" src="" alt="figure">
+            <div class="game__buffer"> 
+                <p class="title">Буффер</p>
+                <div class="buffer-wrapper">
+                    <img class="buffer__figure" src="" alt="figure">
+                </div>
             </div>
             <canvas id="game">
                 
             </canvas>
             <div class="next__figure">
-                <img class="figure"  src="" alt="figure">
-                <img class="figure"  src="" alt="figure">
-                <img class="figure"  src="" alt="figure">
-                <img class="figure"  src="" alt="figure">
+                <p class="title">Следующие</p>
+                <div class="wrapper-figures">
+                    <img class="figure"  src="" alt="figure">
+                    <img class="figure"  src="" alt="figure">
+                    <img class="figure"  src="" alt="figure">
+                    <img class="figure"  src="" alt="figure">               
+                </div>
+
             </div>
         </div>
         <p class="game__score"></p>
    </main>
 </body>
+<script src="/js/game/game-mode.js"></script>
 <script src="/js/game/game-end.js"></script>
 <script src="/js/game/player.js"></script>
 <script src="/js/game/figures.js"></script>
