--- a/templates/game-over.html.twig
+++ b/templates/game-over.html.twig
@@ -15,7 +15,7 @@
 
                 <div class="video-placeholder">
                     <video controls height="300" poster="/images/cats.jpg">
-                    <source src="/video/ricroll.mp4" type="/video/mp4">
+                    <source src="/video/ricroll.mp4" type="video/mp4">
                     Ваш браузер не поддерживает встроенные видео :(
                 </video>
             </div>
