--- a/templates/game.html.twig
+++ b/templates/game.html.twig
@@ -21,6 +21,7 @@
             </div>
         </div>
         <p class="game__score"></p>
+        <p class="game__level"></p>
    </main>
 </body>
 <script src="/js/game/game-end.js"></script>
