--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -1,7 +1,7 @@
 * {
     padding: 0;
     margin: 0;
-
+    text-decoration: none;
     font-family: "Russo One", sans-serif;
     font-weight: 400;
 }
