--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -8,10 +8,12 @@
         <div class="header">
             <img src="/images/settings.png" alt="settings" class="settings">
             <img src="/images/logo.png" alt="logo" class="logo">
-            <div class="profile">
-                <p class="profile__nickname">{{user.login ?? 'Славянин'}}</p>
-                <img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
-            </div>
+                <a href="/{{user.login ?? 'signup'}}">
+                    <div class="profile">
+                        <p class="profile__nickname">{{user.login ?? 'Славянин'}}</p>
+                        <img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
+                    </div>          
+                </a>
         </div>
         <div class="menu">
             <div class="link play-solo-bg" onclick="window.location.href = '/game'">
