Добавил профиль (Исправил баг: добавил проверку на наличие пользователя)

--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -9,7 +9,7 @@
             <img src="/images/settings.png" alt="settings" class="settings">
             <img src="/images/logo.png" alt="logo" class="logo">
             <div class="profile">
-                <a href="{{user.login ? path("profile", {login: user.login}) : path('register') }}">
+                <a href="{{(user.login ?? null) ? path("profile", {login: user.login}) : path('register') }}">
                     <div class="profile">
                         <p class="profile__nickname">{{user.login ?? 'Славянин'}}</p>
                         <img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
