добавил ссылку на мультиплеер

--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -27,7 +27,7 @@
                         <p class="play-solo-subtitle">ПРЕВЗОЙДИ СЕБЯ И ПОСТАВЬ НОВЫЙ РЕКОРД</p>
                 </div>
             </div>
-            <div class="link multiplayer-bg" onclick="window.location.href = '/game'">
+            <div class="link multiplayer-bg" onclick="window.location.href = '/multiplayer'">
                 <div class="img-placeholder">
                     <img src="/images/multiplayer.png" alt="multiplayer" class="link__image">
                 </div>
