--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,6 +2,9 @@
 <html lang="ru">
     <head>
         <link rel="icon" type="/image/png" href="/images/icon.png">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block style %}{% endblock %}
