--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -1,56 +1,69 @@
 {% extends "base.html.twig" %}
 
-{% block title %}Menu{% endblock %}
-{% block style %}<link rel="stylesheet" href="/css/menu.css"/>{% endblock %}
-{% block script %}<script src="/js/menu.js"></script>{% endblock %}
-{% block content %}
-    <div class="bg">
-        <div class="header">
-            <img src="/images/settings.png" alt="settings" class="settings">
-            <img src="/images/logo.png" alt="logo" class="logo">
-            <div class="profile">
-                <a href="/{{user.login ?? 'signup'}}">
-                    <div class="profile">
-                        <p class="profile__nickname">{{user.login ?? 'Славянин'}}</p>
-                        <img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
-                    </div>          
-                </a>
-            </div>
-        </div>
-        <div class="menu">
-            <div class="link play-solo-bg" onclick="window.location.href = '/game'">
-                <div class="img-placeholder">
-                    <img src="/images/solo.png" alt="solo" class="link__image">
-                </div>
-                <div class="link__text">
-                    <h1 class="play-solo-header">ОДНОПОЛЬЗОВАТЕЛЬСКИЙ РЕЖИМ</h1>
-                        <p class="play-solo-subtitle">ПРЕВЗОЙДИ СЕБЯ И ПОСТАВЬ НОВЫЙ РЕКОРД</p>
-                </div>
-            </div>
-            <div class="link multiplayer-bg" onclick="window.location.href = '/game'">
-                <div class="img-placeholder">
-                    <img src="/images/multiplayer.png" alt="multiplayer" class="link__image">
-                </div>
-                <div class="link__text">
-                    <h1 class="multiplayer-header">МНОГОПОЛЬЗОВАТЕЛЬСКИЙ РЕЖИМ</h1>
-                        <p class="multiplayer-subtitle">ИГРАЙТЕ ОНЛАЙН С ДРУЗЬЯМИ</p>
-                </div>
-            </div>
-            <div class="link about-us-bg">
-                <div class="img-placeholder">
-                    <img src="/images/about.png" alt="about us" class="link__image">
-                </div>
-                <div class="link__text">
-                    <h1 class="about-us-header">ПРО НАС</h1>
-                        <p class="about-us-subtitle">УЗНАЙТЕ ВСЕ О СЛАВЯНАХ</p>
-                </div>
-            </div>
-        </div>
-    </div>
+{% block title %}Menu
 {% endblock %}
+{% block style %}<link rel="stylesheet" href="/css/select.css"/>
+{% endblock %}
+{% block script %}
+	<script src="/js/menu.js"></script>
+{% endblock %}
+{% block content %}
+	<div class="bg">
+		<div class="header">
+			<img src="/images/settings.png" alt="settings" class="settings">
+			<img src="/images/logo.png" alt="logo" class="logo">
+			<div class="profile">
+				<a href="/{{user.login ?? 'signup'}}">
+					<div class="profile">
+						<p class="profile__nickname">{{user.login ?? 'Славянин'}}</p>
+						<img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
+					</div>
+				</a>
+			</div>
+		</div>
+		<div class="menu">
+			<div class="links links_start">
 
-
-
-
-
-
+				<a href="/select_solo_mode" class="link solo link_with-image">
+					<div class="img-placeholder">
+						<img src="/images/solo.png" alt="solo" class="link__image">
+					</div>
+					<div class="link__text">
+						<h1 class="link__title solo__title">
+							ОДНОПОЛЬЗОВАТЕЛЬСКИЙ РЕЖИМ
+						</h1>
+						<p class="link__subtitle solo__subtitle">
+							ПРЕВЗОЙДИ СЕБЯ И ПОСТАВЬ НОВЫЙ РЕКОРД
+						</p>
+					</div>
+				</a>
+				<a href="/select_mode" class="link multiplayer link_with-image">
+					<div class="img-placeholder">
+						<img src="/images/multiplayer.png" alt="multiplayer" class="link__image">
+					</div>
+					<div class="link__text">
+						<h1 class="link__title multiplayer__title">
+							МНОГОПОЛЬЗОВАТЕЛЬСКИЙ РЕЖИМ
+						</h1>
+						<p class="link__subtitle multiplayer__subtitle">
+							ИГРАЙТЕ ОНЛАЙН С ДРУЗЬЯМИ
+						</p>
+					</div>
+				</a>
+				<a href="/about" class="link about link_with-image">
+					<div class="img-placeholder">
+						<img src="/images/about.png" alt="about" class="link__image">
+					</div>
+					<div class="link__text">
+						<h1 class="link__title about__title">
+							ПРО НАС
+						</h1>
+						<p class="link__subtitle about__subtitle">
+							УЗНАЙТЕ ВСЕ О СЛАВЯНАХ
+						</p>
+					</div>
+				</a>
+			</div>
+		</div>
+	</div>
+{% endblock %}
