--- a/templates/select-mode.html.twig
+++ b/templates/select-mode.html.twig
@@ -31,7 +31,7 @@
 				</div>
 			</a>
 			<div class="links">
-				<a href="/game" class="link custom link_with-image">
+				<a href="/lobby" class="link custom link_with-image">
 					<div class="img-placeholder">
 						<img src="/images/custom.png" alt="custom" class="link__image">
 					</div>
@@ -44,7 +44,7 @@
 						</p>
 					</div>
 				</a>
-				<a href="/game" class="link listing link_with-image">
+				<a href="/lobby" class="link listing link_with-image">
 					<div class="img-placeholder">
 						<img src="/images/listing.png" alt="listing" class="link__image">
 					</div>
