добавил более правильный выбор режима игры

--- a/templates/game.html.twig
+++ b/templates/game.html.twig
@@ -38,11 +38,11 @@
         <p class="game__level"></p>
    </main>
 </body>
-<script src="/js/game/game-mode.js"></script>
-<script src="/js/game/game-end.js"></script>
 <script src="/js/game/player.js"></script>
 <script src="/js/game/interface.js"></script>
 <script src="/js/game/figures.js"></script>
 <script src="/js/game/images.js"></script>
 <script src="/js/game/game.js"></script>
+<script src="/js/game/init-game.js"></script>
+<script src="/js/game/game-end.js"></script>
 {% endblock %}
